# uwekamper_de

./: .gitignore  Dockerfile  Makefile  README.md  create_timeline.py  info.yaml  pelicanconf.py  production.yaml  publishconf.py  pyproject.toml  requirements-docker.txt  requirements.txt  site.yaml  uwekamper_de.lektorproject
configs/: atom.ini  static-search.ini
content/: contact.html  contents.lr  cv.html  impressum.html  index.html
content/about/: about.html
content/blog/: contents.lr  do-a-lot-of-work.html  gimp-scaling.html  index.html  lorem-ipsum.html  traffic-shaping.html
content/blog-categories/: contents.lr
content/contact/: contents.lr
content/cv/: cv.html
content/impressum/: contents.lr
content/pages/: contact.md  cv.md  impressum.md
content/skills/: contents.lr  index.html  skills.html  skills.json
content/static_pages/: contact.md  cv.md  impressum.md
databags/: nav.json
deploy/: index.html
deploy_tmp/: index.html
layout/: _homepage.html  analytics.j2  base.j2  blog.j2  listing.j2  macros.j2
layout-django/: settings.py
layout-django/skeleton/: _base.html  _breadcrumbs.html  _header.html
layout/skeleton/: _base.html  _site_nav.html
media/css/: style.css
media/img/: logo_mit_schrift.xcf
media/js/: skills.js
models/: blog-post.ini  skills.ini
output/: categories.html  index.html
raw_pics/: favicon.xcf
templates/: blog-categories.html  blog-category.html  blog-post.html  blog.html  home.html  layout.html  page.html  skills.html
templates/macros/: blog.html  categories.html  nav.html
theme/templates/: base.html  (+4 more)
(+26 files in other folders)
